HelloUltraviolet/Fixtures/RejectedSource/Expressions/ClosureCaptureUnique/Expected.uv
//! Expected diagnostic metadata for the ClosureCaptureUnique rejected-source specimen.

expectedDiagnostic("E-CON-0120", "rule.16.Capture-Unique-Err")
